@@ -15,6 +15,9 @@ Summary of important user-visible changes for image 2.0.1:
     one vector in the column direction and another vector in the row direction,
     has been removed. Please use conv2 for such cases.
 
+ ** The function `rgbplot' accepts a style option which alows for a composite
+    display of a colormap.
+
 Summary of important user-visible changes for image 2.0.0:
 -------------------------------------------------------------------
 
